# stripe_project

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py
main/: admin.py  models.py  services.py  urls.py  utils.py  views.py
main/management/commands/: fill_db.py
main/migrations/: 0001_initial.py  0002_discount_tax_itemorder_order_itemorder_order.py  0003_item_currency.py  0004_alter_itemorder_options.py
main/templates/main/: base.html  cancel.html  item_detail.html  success.html
